Sync up changes from jigsaw/m2