@@ -41,6 +41,7 @@ import java.security.Permission;
 import java.security.PrivilegedExceptionAction;
 import java.security.cert.Certificate;
 import java.util.*;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.jar.Attributes;
 import java.util.jar.Attributes.Name;
@@ -49,10 +50,13 @@ import java.util.jar.JarFile;
 import java.util.jar.Manifest;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipFile;
+
 import jdk.internal.jimage.ImageLocation;
 import jdk.internal.jimage.ImageReader;
-import sun.net.util.URLUtil;
+
 import sun.net.www.ParseUtil;
+import sun.net.www.protocol.jrt.JavaRuntimeURLConnection;
+import sun.net.util.URLUtil;
 
 /**
  * This class is used to maintain a search path of URLs for loading classes
@@ -61,12 +65,15 @@ import sun.net.www.ParseUtil;
  * @author  David Connelly
  */
 public class URLClassPath {
-    final static String USER_AGENT_JAVA_VERSION = "UA-Java-Version";
-    final static String JAVA_VERSION;
+    private static final String USER_AGENT_JAVA_VERSION = "UA-Java-Version";
+    private static final String JAVA_HOME;
+    private static final String JAVA_VERSION;
     private static final boolean DEBUG;
     private static final boolean DISABLE_JAR_CHECKING;
 
     static {
+        JAVA_HOME = java.security.AccessController.doPrivileged(
+            new sun.security.action.GetPropertyAction("java.home"));
         JAVA_VERSION = java.security.AccessController.doPrivileged(
             new sun.security.action.GetPropertyAction("java.version"));
         DEBUG        = (java.security.AccessController.doPrivileged(
@@ -1240,30 +1247,64 @@ public class URLClassPath {
     }
 
     /**
-     * A Loader of classes and resources from a jimage file.
+     * A Loader of classes and resources from a jimage file located in the
+     * runtime image.
      */
-    private static class JImageLoader extends Loader {
-        private final ImageReader jimage;
+    private static class JImageLoader
+        extends Loader implements JavaRuntimeURLConnection.ResourceFinder
+    {
+        private static final AtomicInteger NEXT_INDEX = new AtomicInteger();
 
-        static URL toJImageURL(URL url) throws MalformedURLException {
-            return new URL("jimage" + url.toString().substring(4));
-        }
+        private final ImageReader jimage;
+        private final int index;
 
         JImageLoader(URL url) throws IOException {
-            super(toJImageURL(url));
-            this.jimage = JImageCache.get(getBaseURL());
-        }
+            super(url);
 
-        private String toEntryName(String name) {
-            return name;
+            // get path to image file and check that it's in the runtime
+            String urlPath = url.getFile().replace('/', File.separatorChar);
+
+            File filePath = new File(ParseUtil.decode(urlPath));
+            File home = new File(JAVA_HOME);
+            File parent = filePath.getParentFile();
+            while (parent != null) {
+                if (parent.equals(home))
+                    break;
+                parent = parent.getParentFile();
+            }
+            if (parent == null)
+                throw new IOException(filePath + " not in runtime image");
+
+            this.jimage = ImageReader.open(filePath.toString());
+            this.index = NEXT_INDEX.getAndIncrement();
+
+            // register with the jimage protocol handler
+            JavaRuntimeURLConnection.register(this);
         }
 
         /**
-         * Returns a URL to the given entry in the jimage.
+         * Maps the given resource name to a module.
          */
-        private URL toURL(String entry) {
+        private String nameToModule(String name) {
+            int pos = name.lastIndexOf('/');
+            if (pos > 0) {
+                String pkg = name.substring(0, pos);
+                String module = jimage.getModule(pkg);
+                if (module != null)
+                    return module;
+            }
+            // cannot map to module
+            return "UNNAMED" + index;
+        }
+
+        /**
+         * Constructs a URL for the resource name.
+         */
+        private URL toURL(String name) {
+            String module = nameToModule(name);
+            String encodedName = ParseUtil.encodePath(name, false);
             try {
-                return new URL(getBaseURL() + "!/" +  ParseUtil.encodePath(entry, false));
+                return new URL("jrt:/" + module + "/" + encodedName);
             } catch (MalformedURLException e) {
                 throw new InternalError(e);
             }
@@ -1271,11 +1312,10 @@ public class URLClassPath {
 
         @Override
         URL findResource(String name, boolean check) {
-            String entry = toEntryName(name);
-            ImageLocation location = jimage.findLocation(entry);
+            ImageLocation location = jimage.findLocation(name);
             if (location == null)
                 return null;
-            URL url= toURL(entry);
+            URL url = toURL(name);
             if (check) {
                 try {
                     URLClassPath.check(url);
@@ -1286,26 +1326,12 @@ public class URLClassPath {
             return url;
         }
 
-        // Returns the module name containing the given entry of a class file;
-        // otherwise return null
-        String findModule(String entry) {
-            if (entry.endsWith(".class")) {
-                return jimage.findModule(entry);
-            }
-            return null;
-        }
-
         @Override
         Resource getResource(String name, boolean check) {
-            final String entry = toEntryName(name);
-            ImageLocation location = jimage.findLocation(entry);
+            ImageLocation location = jimage.findLocation(name);
             if (location == null)
                 return null;
-            if (DEBUG) {
-                System.err.println("JImageLoader.getResource(\"" + name + "\") module: " +
-                                   findModule(entry) + " " + location);
-            }
-            final URL url = toURL(entry);
+            URL url = toURL(name);
             if (check) {
                 try {
                     URLClassPath.check(url);
@@ -1315,14 +1341,13 @@ public class URLClassPath {
             }
             return new Resource() {
                 @Override
-                public String getName() { return entry; }
+                public String getName() { return name; }
                 @Override
                 public URL getURL() { return url; }
                 @Override
                 public URL getCodeSourceURL() {
                     try {
-                        String name = findModule(entry);
-                        return URI.create("module:" + name).toURL();
+                        return new URL("jrt:/" + nameToModule(name));
                     } catch (MalformedURLException e) {
                         throw new InternalError(e);
                     }
@@ -1340,9 +1365,17 @@ public class URLClassPath {
         }
 
         @Override
-        public void close() throws IOException {
-            JImageCache.remove(getBaseURL());
-            jimage.close();
+        public void close() {
+            throw new UnsupportedOperationException();
+        }
+
+        @Override
+        public Resource find(String module, String name) throws IOException {
+            String m = nameToModule(name);
+            if (!m.equals(module))
+                return null;
+            // URLConnection will do the permission check
+            return getResource(name, false);
         }
     }
 }
